# abydos

./: .codeclimate.yml  .coveragerc  .gitignore  .gitmodules  .landscape.yml  .project  .pypirc  .pyup.yml  .scrutinizer.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CODING_STANDARDS  CODING_STANDARDS.rst  FAQ.rst  HISTORY.rst  MANIFEST.in  Pipfile  README.md  README.rst  abydos.xcf  appveyor.yml  azure-pipelines.yml  badge_update.py  btest.sh  cleanup.sh  pylint.rc  pylint.status  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml
abydos/: __init__.py  _bm.py  _bmdata.py  _compat.py  bm.py  bmdata.py  clustering.py  compression.py  corpus.py  distance.py  fingerprint.py  lm.py  ngram.py  phones.py  phonetic.py  qgram.py  stats.py  stemmer.py  util.py
abydos/bm/: ash_approx_any.py  ash_approx_common.py  ash_approx_cyrillic.py  ash_approx_english.py  ash_approx_french.py  ash_approx_german.py  ash_approx_hebrew.py  ash_approx_hungarian.py  ash_approx_polish.py  ash_approx_romanian.py  ash_approx_russian.py  ash_approx_spanish.py  ash_exact_any.py  ash_exact_approxcommon.py  ash_exact_common.py  ash_exact_cyrillic.py  ash_exact_english.py  ash_exact_french.py  ash_exact_german.py  ash_exact_hebrew.py  ash_exact_hungarian.py  ash_exact_polish.py  ash_exact_romanian.py  ash_exact_russian.py  ash_exact_spanish.py  ash_hebrew_common.py  ash_rules_any.py  ash_rules_cyrillic.py  ash_rules_english.py  ash_rules_french.py  ash_rules_german.py  ash_rules_hebrew.py  ash_rules_hungarian.py  ash_rules_polish.py  ash_rules_romanian.py  ash_rules_russian.py  ash_rules_spanish.py  gen_approx_any.py  gen_approx_arabic.py  gen_approx_common.py  (+80 more)
abydos/compression/: _Arithmetic.py  _BWT.py  _RLE.py  __init__.py  _arithmetic.py  _bwt.py  _rle.py  arithmetic.py  bwt.py  rle.py
abydos/corpus/: _Corpus.py  _NGramCorpus.py  __init__.py  _corpus.py  _ngram.py  _ngram_corpus.py  _unigram_corpus.py  corpus.py  ngram.py
abydos/distance/: _Bag.py  _Baystat.py  _Chebyshev.py  _Cosine.py  _DamerauLevenshtein.py  _Dice.py  _Distance.py  _Editex.py  _Euclidean.py  _Eudex.py  _Gotoh.py  _Hamming.py  _Ident.py  _Indel.py  _Jaccard.py  _JaroWinkler.py  _LCSseq.py  _LCSstr.py  _Length.py  _Levenshtein.py  _MLIPNS.py  _MRA.py  _Manhattan.py  _Minkowski.py  _MongeElkan.py  _NCDarith.py  _NCDbwtrle.py  _NCDbz2.py  _NCDlzma.py  _NCDrle.py  _NCDzlib.py  _NeedlemanWunsch.py  _Overlap.py  _Prefix.py  _RatcliffObershelp.py  _Sift4.py  _Sift4Simplest.py  _SmithWaterman.py  _Strcmp95.py  _Suffix.py  (+422 more)
abydos/fingerprint/: _Count.py  _Occurrence.py  _OccurrenceHalved.py  _OmissionKey.py  _PhoneticFingerprint.py  _Position.py  _QGramFingerprint.py  _SkeletonKey.py  _StringFingerprint.py  _Synoname.py  __init__.py  _basic.py  _bwt_f.py  _bwtf.py  _bwtrle_f.py  _bwtrlef.py  _consonant.py  _count.py  _extract.py  _extract_position_frequency.py  _fingerprint.py  _lacss.py  _lc_cutter.py  _lightweight.py  _occurrence.py  _occurrence_halved.py  _omission_key.py  _phonetic.py  _phonetic_fingerprint.py  _position.py  _qgram.py  _qgram_fingerprint.py  _skeleton_key.py  _speedcop.py  _string.py  _string_fingerprint.py  _synoname.py  _synoname_toolcode.py  basic.py  lightweight.py  (+2 more)
abydos/phones/: __init__.py  (+2 more)
binder/: Basic Examples.ipynb  Reversed Metaphone using Keras seq2seq.ipynb  Text Classification of Drug Reviews.ipynb  requirements.txt
data/: features_csv_to_dict.py  features_symbolic.csv  features_symbols.csv
docs/: Makefile  abydos.bib  abydos.clustering.rst  abydos.compression.arithmetic.rst  abydos.compression.bwt.rst  abydos.compression.rle.rst  abydos.compression.rst  abydos.corpus.corpus.rst  abydos.corpus.ngram.rst  abydos.corpus.rst  abydos.distance.basic.rst  abydos.distance.baystat.rst  abydos.distance.compression.rst  abydos.distance.editex.rst  abydos.distance.eudex.rst  abydos.distance.hamming.rst  abydos.distance.jaro.rst  abydos.distance.levenshtein.rst  abydos.distance.minkowski.rst  abydos.distance.mra.rst  abydos.distance.rst  abydos.distance.seqalign.rst  abydos.distance.sequence.rst  abydos.distance.sift4.rst  abydos.distance.synoname.rst  abydos.distance.token.rst  abydos.distance.typo.rst  abydos.fingerprint.basic.rst  abydos.fingerprint.lightweight.rst  abydos.fingerprint.rst  abydos.fingerprint.speedcop.rst  abydos.fingerprint.synoname.rst  abydos.ngram.rst  abydos.phones.rst  abydos.phonetic.alpha_sis.rst  abydos.phonetic.bmpm.rst  abydos.phonetic.caverphone.rst  abydos.phonetic.davidson.rst  abydos.phonetic.de.rst  abydos.phonetic.dm.rst  (+45 more)
helpers/: bm_php2py.py  call_and_write_log.py
notebooks/: Basic Examples.ipynb  environment.yml
tests/: __init__.py  test__compat.py  test_clustering.py  test_compression.py  test_corpus.py  test_corpus_corpus.py  test_corpus_ngram.py  test_distance.py  test_distance_basic.py  test_distance_compression.py  test_distance_levenshtein.py  test_distance_minkowski.py  test_distance_seqalign.py  test_distance_sequence.py  test_distance_token.py  test_fingerprint.py  test_fingerprint_basic.py  test_fingerprint_lightweight.py  test_fingerprint_speedcop.py  test_fingerprint_synoname.py  test_ngram.py  test_phones.py  test_phonetic.py  test_phonetic_bmpm.py  test_phonetic_caverphone.py  test_phonetic_de.py  test_phonetic_eudex.py  test_phonetic_metaphone.py  test_phonetic_nysiis.py  test_phonetic_phonet.py  test_phonetic_sound_d.py  test_phonetic_sv.py  test_qgram.py  test_stats.py  test_stats_confusion_table.py  test_stats_pairwise.py  test_stemmer.py  test_stemmer_caumanns.py  test_stemmer_lovins.py  test_stemmer_paice_husk.py  (+5 more)
(+722 files in other folders)
