[tool.black]
line-length = 79
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | _build
  | build
  | dist
)/
'''

[tool.poetry]
name = "abydos"
version = "0.4.1"
description = "Abydos NLP/IR library"
license = "GPL-3.0+"
authors = [
    "Christopher C. Little <chrisclittle+abydos@gmail.com>"
]
readme = "README.rst"
homepage = "https://github.com/chrislit/abydos"
repository = "https://github.com/chrislit/abydos"
documentation = "https://abydos.readthedocs.io/"
keywords = [
    "nlp",
    "ir",
    "linguistics",
    "phonetic algorithms",
    "string distance",
]
include = [
    "AUTHORS.rst",
    "CODE_OF_CONDUCT.rst",
    "CODING_STANDARDS.rst",
    "HISTORY.rst",
    "abydos.png"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

numpy = ">=1.7"
six = ">=1.3"
pyliblzma = { version = "^0.5.3", python = "~2.7" }
